@@ -18,7 +18,7 @@ version next:
 - Automatic thread count based on detection number of (available) CPU cores
 - y41p Brooktree Uncompressed 4:1:1 12-bit encoder and decoder
 - ffprobe -show_error option
-- Avid 1:1 10-bit RGB Packer decoder
+- Avid 1:1 10-bit RGB Packer codec
 - v308 Quicktime Uncompressed 4:4:4 encoder and decoder
 - yuv4 libquicktime packed 4:2:0 encoder and decoder
 - ffprobe -show_frames option
@@ -28,6 +28,7 @@ version next:
 - optimized iMDCT transform on x86 using SSE for for mpegaudiodec
 - Improved PGS subtitle decoder
 - dumpgraph option to lavfi device
+- r210 and r10k encoders
 
 
 version 0.9:
